gccida/c2/copy_insn_list
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1786:4: error: expected ';' after expression
rtx v7; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1786:5: error: use of undeclared identifier 'v7'
rtx v7; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1788:4: error: expected ';' after expression
rtx v9; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1788:5: error: use of undeclared identifier 'v9'
rtx v9; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1805:4: error: expected ';' after expression
rtx inline_target; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1805:5: error: use of undeclared identifier 'inline_target'
rtx inline_target; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1807:4: error: expected ';' after expression
rtx v28; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1807:5: error: use of undeclared identifier 'v28'
rtx v28; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1808:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1808:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1829:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1829:5: error: use of undeclared identifier 'v50'
rtx v50; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1846:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( unsigned __int16 *)rtx[2]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1849:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)rtx[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1851:1: error: use of undeclared identifier 'v9'
v9 = single_set_2( rtx, *( rtx *)&rtx[2]); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1851:33: error: expected expression
v9 = single_set_2( rtx, *( rtx *)&rtx[2]); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1855:1: error: use of undeclared identifier 'v9'
v9 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1860:1: error: use of undeclared identifier 'inline_target'
inline_target = map->inline_target; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/integrate.c:1861:6: error: use of undeclared identifier 'v9'
if ( v9 && !inline_target && ( *( _DWORD *)v9->fld[0].rtwint & 0x4000FFFF) == 1073741885 ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_insn_list/src/obj/integrate.o] Error 1
